re-configure Work page, fix margin-top on window collapse

--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,6 @@ hr {
 
 .line {
 	border: 1px solid #E1E1E1;
-	margin-bottom: 1rem;
 }
 
 /*Home Page CSS-------------------------------------*/
@@ -134,9 +133,15 @@ hr {
 	color: #555;
 }
 
-.work img {
-	width: 275px;
-	margin: 4rem auto;
+.image-container img {
+	max-height: 200px;
+	margin: 2rem auto 1rem;
+}
+
+.work-description {
+	min-width: 35rem;
+	max-width: 50rem;
+	margin: 1rem auto 3rem;
 }
 
 .work-description p {
@@ -146,6 +151,7 @@ hr {
 
 #title {
 	font-size: 3rem;
+	text-align: center;
 }
 
 .work-description img {
@@ -156,7 +162,8 @@ hr {
 
 .work-line {
     border: 1px solid;
-    width: 50rem;
+    min-width: 35rem;
+    max-width: 50rem;
     margin: 1rem auto;
 }
 
@@ -254,4 +261,11 @@ hr {
 
 .shadow-deep {
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .2)
+}
+
+/*Adjusts margin top of views when windo is collapsed-------------------------------------*/
+@media only screen and (max-width: 475px) {
+    .page {
+        margin-top: 138px;
+    }
 }
